<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ExplanationActivity">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/tororoColor"
        tools:layout_editor_absoluteX="29dp"
        tools:layout_editor_absoluteY="54dp"
        tools:text="@string/explanation1" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="349dp"
        android:layout_height="101dp"
        android:text="@string/explanation2"
        android:textColor="@color/tororoColor"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="168dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explanation3"
        android:textColor="@color/tororoColor"
        android:textSize="28sp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="296dp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/tororoimo_ai"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="382dp" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/fukidashi"
        tools:layout_editor_absoluteX="201dp"
        tools:layout_editor_absoluteY="390dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="よろしく〜！"
        android:textColor="@color/fuchidoriColor"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="438dp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:srcCompat="@drawable/next_button"
        tools:layout_editor_absoluteX="59dp"
        tools:layout_editor_absoluteY="652dp" />
</androidx.constraintlayout.widget.ConstraintLayout>